:lipstick: overflow fixed

--- a/src/components/page/BlogPost/BlogPost.css
+++ b/src/components/page/BlogPost/BlogPost.css
@@ -3,14 +3,24 @@
 
 .BlogPostTitleContainer {
   display: flex;
+  min-height: 420px;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .BlogPost {
   max-width: 1000px;
   margin: auto;
   margin-top: calc(-1 * var(--space-12));
+  padding: var(--space-1);
   position: relative;
   z-index: 710;
+}
+
+@media screen and (min-width: 1200px) {
+  .BlogPost {
+    padding: var(--space-2);
+  }
 }
 
 .BlogPost .content {
