--- a/src/components/page/BlogPost/BlogTags/BlogTagInteraction.css
+++ b/src/components/page/BlogPost/BlogTags/BlogTagInteraction.css
@@ -1,5 +1,7 @@
 .BlogTagInteraction {
   position: relative;
+  width: 100%;
+  overflow-x: hidden;
   height: 420px;
 }
 
